[gd_scene load_steps=14 format=3 uid="uid://8mwywa4awn30"]

[ext_resource type="Script" uid="uid://b41bbnfex73u3" path="res://ScenesAndScripts/GameElements/player.gd" id="1_6dvrn"]
[ext_resource type="Texture2D" uid="uid://b2hvukayn5f0t" path="res://Art/PNG Files/characters/Player/Player.png" id="2_lld3t"]
[ext_resource type="Texture2D" uid="uid://d1dxqlv1fgj5v" path="res://Art/PNG Files/arrow.svg" id="3_q65ba"]
[ext_resource type="Script" uid="uid://0448pcmbuw30" path="res://ScenesAndScripts/Components/preview_vector.gd" id="3_r71dn"]
[ext_resource type="Script" uid="uid://b6l1qhqewf32a" path="res://ScenesAndScripts/Components/zoom_camera.gd" id="4_ai6u8"]
[ext_resource type="Texture2D" uid="uid://fnmuii5lrb5e" path="res://Art/PNG Files/arrowFill.svg" id="4_nsli7"]
[ext_resource type="Script" uid="uid://cuv0k428hfvp3" path="res://ScenesAndScripts/Components/trail_line.gd" id="5_usrgj"]
[ext_resource type="AudioStream" uid="uid://esm42mb07xgd" path="res://Sound/Sfx/drag.mp3" id="6_lld3t"]
[ext_resource type="AudioStream" uid="uid://cnyuvvre7niwa" path="res://Sound/Sfx/whoosh.mp3" id="7_r71dn"]
[ext_resource type="AudioStream" uid="uid://bmbwopixvq3w" path="res://Sound/Sfx/pop.wav" id="9_usrgj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pd41g"]
radius = 65.9697

[sub_resource type="Curve" id="Curve_6bj8f"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 3), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_6bj8f"]
offsets = PackedFloat32Array(0, 0.997573, 1)
colors = PackedColorArray(1, 1, 1, 0.392157, 1, 1, 1, 1, 1, 1, 1, 1)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("drag", "release", "cancel", "tap")]
collision_layer = 2
script = ExtResource("1_6dvrn")
drag = NodePath("Sounds/Drag")
release = NodePath("Sounds/Release")
cancel = NodePath("Sounds/Cancel")
tap = NodePath("Sounds/Tap")
boost = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pd41g")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_pd41g")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.12, 0.12)
texture = ExtResource("2_lld3t")
flip_h = true

[node name="PreviewVector" type="TextureProgressBar" parent="." node_paths=PackedStringArray("parent")]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_right = 192.0
offset_bottom = 96.0
grow_vertical = 2
pivot_offset = Vector2(-100, 48)
texture_under = ExtResource("3_q65ba")
texture_over = ExtResource("3_q65ba")
texture_progress = ExtResource("4_nsli7")
script = ExtResource("3_r71dn")
offSet = Vector2(75, -40)
parent = NodePath("..")

[node name="ZoomCamera" type="Camera2D" parent="." node_paths=PackedStringArray("parent")]
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
script = ExtResource("4_ai6u8")
parent = NodePath("..")
aim_zoom = 1.5

[node name="TrailLine" type="Line2D" parent="." node_paths=PackedStringArray("ball")]
top_level = true
z_index = -1
width_curve = SubResource("Curve_6bj8f")
default_color = Color(1, 1, 1, 0.588235)
gradient = SubResource("Gradient_6bj8f")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("5_usrgj")
ball = NodePath("..")
multiplier = 3

[node name="Sounds" type="Node" parent="."]

[node name="Drag" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_lld3t")
volume_db = -10.0
pitch_scale = 1.5
bus = &"SFX"

[node name="Release" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_r71dn")
volume_db = -5.0
pitch_scale = 2.0
bus = &"SFX"

[node name="Cancel" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_r71dn")
volume_db = -5.0
pitch_scale = 5.0
bus = &"SFX"

[node name="Tap" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_usrgj")
volume_db = -15.0
pitch_scale = 0.3
bus = &"SFX"

[connection signal="restart" from="." to="." method="_on_restart"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
